<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.setting.AlarmsSettingFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <ImageView
            android:id="@+id/iv_back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_ios_24" android:contentDescription="@string/back" android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            app:tint="?attr/android:textColorTertiary" />

        <TextView
            android:id="@+id/tv_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarms" android:textColor="?attr/android:textColorTertiary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/iv_back_arrow"
            android:layout_marginStart="0dp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="24dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <RelativeLayout
            android:id="@+id/layout_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_box" android:padding="16dp"
            android:layout_marginBottom="12dp">
            <TextView
                android:id="@+id/tv_theme_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme"
                android:textColor="?attr/android:textColorPrimary"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:checked="true"
                app:thumbTint="#469536"  app:trackTint="#469536"  />
            <TextView
                android:id="@+id/tv_theme_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light"
                android:textColor="?attr/android:textColorPrimary"
                android:textSize="16sp"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/switch_theme"
                android:layout_marginEnd="8dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_box" android:padding="16dp"
            android:layout_marginBottom="12dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"> <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textColor="?attr/android:textColorPrimary"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>