<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.setting.SettingFragment">
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

        <ImageView
            android:id="@+id/iv_back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/note_default"
            android:src="@drawable/baseline_arrow_back_ios_24"
            app:tint="?attr/android:textColorTertiary" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="?attr/android:textColorTertiary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/iv_back_arrow"
        android:layout_marginStart="0dp"/>
</RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="24dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <RelativeLayout
            android:id="@+id/layout_alarms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_box" android:padding="16dp"
            android:layout_marginBottom="12dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"> <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarms"
            android:textColor="?attr/android:textColorPrimary"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/baseline_arrow_forward_ios_24"
                android:contentDescription="@string/alarms"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                app:tint="?attr/android:textColorPrimary"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_quizzes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_box" android:padding="16dp"
            android:layout_marginBottom="12dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quizzes"
                android:textColor="?attr/android:textColorPrimary"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/baseline_arrow_forward_ios_24"
                android:contentDescription="@string/quizzes"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                app:tint="?attr/android:textColorPrimary" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_your_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_box"
            android:padding="16dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data"
                android:textColor="?attr/android:textColorPrimary"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/baseline_arrow_forward_ios_24"
                android:contentDescription="@string/description"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                app:tint="?attr/android:textColorPrimary" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>